genai/k8s/01-genai-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: genai-app
  namespace: developmentv1
  labels:
    app: genai-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: genai-app
  template:
    metadata:
      labels:
        app: genai-app
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/metrics"
        prometheus.io/port: "8000"
    spec:
      containers:
      - name: genai-app
        image: ghcr.io/aet-devops25/team-cache-me-if-you-can/genai-app:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
