genai/k8s/07-genai-celery-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: genai-celery-worker
  labels:
    app: genai-celery-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: genai-celery-worker
  template:
    metadata:
      labels:
        app: genai-celery-worker
    spec:
      containers:
      - name: genai-celery-worker
        image: ghcr.io/aet-devops25/team-cache-me-if-you-can/genai-app:latest
        command: ["celery", "-A", "app.celery_worker.celery_app", "worker", "--loglevel=info"]
