genai/k8s/02-genai-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: genai-app-service
  namespace: developmentv1
spec:
  selector:
    app: genai-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
