genai/k8s/04-weaviate-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weaviate-service # This name is used in the genai-app WEAVIATE_URL
  namespace: developmentv1
  labels:
    app: weaviate
spec:
  selector:
    app: weaviate
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: http
    - name: grpc
      protocol: TCP
      port: 50051
      targetPort: grpc
  type: ClusterIP
