genai/k8s/05-genai-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: genai-dev-ingress
  namespace: developmentv1
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - genai-dev.team-cache-me-if-you-can.student.k8s.aet.cit.tum.de
    secretName: genai-dev-tls
  rules:
  - host: genai-dev.team-cache-me-if-you-can.student.k8s.aet.cit.tum.de
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: genai-app-service
            port:
              number: 8000
